# lam-v2-public

./: .gitignore  CODE_OF_CONDUCT.md  COMMERCIAL.md  COMPATIBILITY.md  CONTRIBUTING.md  NOTICE  PATENT_PLEDGE.md  PROTOCOL.md  README.md  SECURITY.md  SUPPORT.md  TRADEMARK_POLICY.md  package-lock.json  package.json
conformance/: spec.md
conformance/appendices/: embodied_agents.md
conformance/fixtures/: 001_basic_text.json  010_scope_isolation.json  020_dedupe_idempotent.json  030_evidence_roundtrip.json  032_context_roundtrip.json  035_pdf_text_evidence.json  036_upstream_text_view_claim_evidence.json  037_video_text_view_evidence.json  040_retrieve_determinism.json  041_state_over_time.json  042_contradiction_cluster.json  045_idish_substring_collision.json  050_forget_retention.json  060_scope_selector.json
conformance/fixtures/assets/: mp4_asr_blunt_answers.b64  pdf_green_tea.b64  png_1x1.b64
conformance/runner/: asserts.ts  http.ts  normalize.ts  run.ts
local/: compose.yml
scripts/: conformance-local.mjs
sdk/python/: README.md  pyproject.toml
sdk/python/src/lam_sdk/: __init__.py  client.py
sdk/ts/: README.md  package.json  tsconfig.json
sdk/ts/src/: index.js  index.ts
